--- a/param.yaml
+++ b/param.yaml
@@ -5,6 +5,12 @@ save_path : '/home/sstock/Seafile/GJ251/stellar_param/' # Path were the results 
 
 model_path : '/media/sstock/Seagate Expansion Drive/Project_SPOG/Models_uncompressed_BV_new.h5'  # Path to the hdf5 file
 
+photometric_band_A: 'mag' #photometric band that defines the ordinate
+
+photometric_band_B: 'color' #secondary photometric band
+
+reverse: False   # if True: color equals photometric_band_A-photometric_band_B ; if False color equals photometric_band_B-photometric_band_A
+
 mag_star : 7.18264 # magnitude of star in certain band [mag]
 
 mag_star_err : 0.010 #uncertainty of magnitude in the band
@@ -29,7 +35,7 @@ A_lambda : 0.21                # extinction A_band
 
 E_color : 0.06                     # reddening in color bands
 
-parameterization: 'default2'      # default, default2, log, linear
+parameterization: 'default2'      # parametrization of derived paramers: default, default2 (as default but includes phase and mass loss), log, linear
 
 model_sampling: 10           # Default is 1, higher integer value to use sparser sampling on the models by using every nth model in terms of metallicity, improving model load times but possibly affecting parameter precision and accuracy. Not recommended for final calculations
 
@@ -39,7 +45,7 @@ return_ascii: True # if True saves an ascii file (readable by Topcat)
 
 plot_posterior: True #if True saves a posterior plot (without cornerplot)
 
-posterior_bins: -1 #send the bin argument to astropy.stats.histogram (can be float or sting), if set to -1 the optimal number of bins will be calculated by using a self-implemented algorithm provided in Hogg (2008) (arkiv:0807.4820v1)
+posterior_bins: 20 #send the bin argument to astropy.stats.histogram (can be float or sting), if set to -1 the optimal number of bins will be calculated by using a self-implemented algorithm provided in Hogg (2008) (arkiv:0807.4820v1). Important note: The number of bins dos not affect the results but only influences the visualised posterior plots! 
 
 posterior_fig_kwargs: {} #kwargs to sent to matplotlib.pyplot.subplot to influence the figure style, set empty {} for default
 
